Fix mobile clipping of file__item border

--- a/src/styles/pages/_files.scss
+++ b/src/styles/pages/_files.scss
@@ -2,6 +2,9 @@
   position: relative;
   display: block;
   border: 1px dotted black;   
+  // Fix clipping of border on mobile
+  margin-right: 1px;
+  margin-left: 1px;
   padding: 1rem;
   color: rgb(106, 106, 122);
   transition: all 200ms ease;    
